[project]
name = "cipher-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "numpy>=2.4.3",
    "openwakeword>=0.4.0",
    "sounddevice>=0.5.5",
]
